2003-11-24  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/insertion.c (end_insertion): indent the first paragraph
	after @float.

2003-11-24  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/cmds.c: new commands @float and @caption.

	* makeinfo/insertion.h: new environment floatenv.

	* makeinfo/insertion.c (cm_float, cm_caption): new functions.
	(begin_insertion, end_insertion): handle floatenv.

	* makeinfo/xml.c:
	* makeinfo/xml.h: new elements float, floattype, caption, floattable,
	floatfigure, floatexample.

	* makeinfo/insertion.c (cm_example):
	* makeinfo/xml.c (xml_insert_docbook_image, xml_begin_multitable):
	insert label and id attributes, title element for docbook if used
	inside @float.

	* makeinfo/xml.c: replacements for multitable and informalfigure.
	(xml_insert_element_with_attribute): special-cased float element for
	docbook to make it appear in element stack and thus enable element
	replacements inside floatenv.

2003-11-24  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/float.c:
	* makeinfo/float.h: new files for float environment functions.

	* makeinfo/Makefile.am: added new files to makeinfo_SOURCES.

2003-11-24  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/makeinfo.c (cm_xref): xstrdup the result from
	xml_get_assoc_for_id, as it gets freed later.

	* makeinfo/xml.c (xml_get_assoc_for_id, xml_associate_title_with_id):
	reimplemented unnumbered_labels handling.
	(xml_insert_docbook_image): Docbook expects format attribute values to
	be uppercase.

2003-11-23  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\defttsl): new font.
	(\df): set ttsl too.
	(\deffngeneral,\deftypefngeneral,\deftypecvgeneral,
	 \deftypheader): call \ampdefunargs or \normaldefunargs.
	(\normaldefunargs): new macro, typesetting defun
	 args in ttsl (instead of sl).
	(\ampdefunargs): treat & specially and then call \normaldefunargs.
	(\defname): typeset defun name in tt (instead of bf).

	* doc/texinfo.tex: uniformly comment out eol with {% at macro
	starts.
